Fix Experience heading gap caused by min-width on letter spans
Made-with: Cursor

--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -3,12 +3,10 @@
     opacity: 0;
     animation: bounceIn 1s 1s;
     animation-fill-mode: forwards;
-    min-width: 10px;
 
 }
 
 .text-animate-hover {
-    min-width: 10px;
     display: inline-block;
     animation-fill-mode: both;
 
